samples/infrastructure/kubernetes/network/istio-mtls.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: mysql-mtls-dr
spec:
  host: mysql-db-svc
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL  # It's necessary to ensure mysql connection. See more: https://istio.io/faq/security/#mysql-with-mtls
