samples/infrastructure/kubernetes/network/istio-virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-virtualservice-frontend
  namespace: istio-system
spec:
  hosts:
  - frontend-app.microservices.yyyyy.example.com  # You have to configure DNS record
  gateways:
  - istio-system/istio-autogenerated-k8s-ingress  # Changed
  http:
  - route:
    - destination:
        host: frontend-app-svc.default.svc.cluster.local
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-virtualservice-frontend-https
  namespace: istio-system
spec:
  hosts:
  - "frontend-app.microservices.yyyyy.example.com"  # You have to configure DNS record
  gateways:
  - istio-system/istio-gateway-https  # HTTPS
  http:
  - route:
    - destination:
        host: frontend-app-svc.default.svc.cluster.local
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-virtualservice-backend
  namespace: istio-system
spec:
  hosts:
  - backend-app.microservices.yyyyy.example.com  # You have to configure DNS record
  gateways:
  - istio-system/istio-autogenerated-k8s-ingress  # Changed
  http:
  - match:
    - uri:
        prefix: /api
    route:
    - destination:
        host: backend-app-svc.default.svc.cluster.local
        subset: stable
        port:
          number: 3000
      weight: 100  # all for it
    - destination:
        host: backend-app-svc.default.svc.cluster.local
        subset: beta
        port:
          number: 3000
      weight: 0
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: istio-destinationrule-backend
  namespace: istio-system
spec:
  host: backend-app-svc.default.svc.cluster.local
  subsets:
  - name: stable
    labels:
      version: v1  # new one
  - name: beta
    labels:
      version: v1-beta
